src/main/gen/org/hedhman/pony/idea/generated/parsing/PonyParser.java
/* Copyright Niclas Hedhman, 2020. All rights reserved. Licensed under the Apache License, Version 2.0 (the "License"). See LICENSE.txt*/
package org.hedhman.pony.idea.generated.parsing;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.hedhman.pony.idea.generated.parsing.PonyTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class PonyParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return module(b, l + 1);
  }

  /* ********************************************************** */
  // ('\' ID (',' ID)* '\')? (exprseq | jump)
  public static boolean annotatedrawseq(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotatedrawseq")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATEDRAWSEQ, "<annotatedrawseq>");
    r = annotatedrawseq_0(b, l + 1);
    r = r && annotatedrawseq_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('\' ID (',' ID)* '\')?
  private static boolean annotatedrawseq_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotatedrawseq_0")) return false;
    annotatedrawseq_0_0(b, l + 1);
    return true;
  }

  // '\' ID (',' ID)* '\'
  private static boolean annotatedrawseq_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotatedrawseq_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "\\");
    r = r && consumeToken(b, ID);
    r = r && annotatedrawseq_0_0_2(b, l + 1);
    r = r && consumeToken(b, "\\");
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' ID)*
  private static boolean annotatedrawseq_0_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotatedrawseq_0_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!annotatedrawseq_0_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "annotatedrawseq_0_0_2", c)) break;
    }
    return true;
  }

  // ',' ID
  private static boolean annotatedrawseq_0_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotatedrawseq_0_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && consumeToken(b, ID);
    exit_section_(b, m, null, r);
    return r;
  }

  // exprseq | jump
  private static boolean annotatedrawseq_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotatedrawseq_1")) return false;
    boolean r;
    r = exprseq(b, l + 1);
    if (!r) r = jump(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // infix ('=' assignment)?
  public static boolean assignment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT, "<assignment>");
    r = infix(b, l + 1);
    r = r && assignment_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('=' assignment)?
  private static boolean assignment_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_1")) return false;
    assignment_1_0(b, l + 1);
    return true;
  }

  // '=' assignment
  private static boolean assignment_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "=");
    r = r && assignment(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ID
  //   | THIS
  //   | literal
  //   | ('(' | LPAREN_NEW) rawseq tuple? ')'
  //   | ('[' | LSQUARE_NEW) ('as' type_ ':')? rawseq? ']'
  //   | 'object' ('\' ID (',' ID)* '\')? cap? ('is' type_)? members 'end'
  //   | '{' ('\' ID (',' ID)* '\')? cap? ID? typeparams? ('(' | LPAREN_NEW) lambdaparams? ')' lambdacaptures? (':' type_)? '?'? '=>' rawseq '}' cap?
  //   | '@{' ('\' ID (',' ID)* '\')? cap? ID? typeparams? ('(' | LPAREN_NEW) lambdaparams? ')' lambdacaptures? (':' type_)? '?'? '=>' rawseq '}' cap?
  //   | ffi_decl typeargs? ('(' | LPAREN_NEW) positional? named? ')' '?'?
  //   | LOC
  public static boolean atom(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATOM, "<atom>");
    r = consumeToken(b, ID);
    if (!r) r = consumeToken(b, THIS);
    if (!r) r = literal(b, l + 1);
    if (!r) r = atom_3(b, l + 1);
    if (!r) r = atom_4(b, l + 1);
    if (!r) r = atom_5(b, l + 1);
    if (!r) r = atom_6(b, l + 1);
    if (!r) r = atom_7(b, l + 1);
    if (!r) r = atom_8(b, l + 1);
    if (!r) r = consumeToken(b, LOC);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('(' | LPAREN_NEW) rawseq tuple? ')'
  private static boolean atom_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = atom_3_0(b, l + 1);
    r = r && rawseq(b, l + 1);
    r = r && atom_3_2(b, l + 1);
    r = r && consumeToken(b, ")");
    exit_section_(b, m, null, r);
    return r;
  }

  // '(' | LPAREN_NEW
  private static boolean atom_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "(");
    if (!r) r = consumeToken(b, LPAREN_NEW);
    exit_section_(b, m, null, r);
    return r;
  }

  // tuple?
  private static boolean atom_3_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_3_2")) return false;
    tuple(b, l + 1);
    return true;
  }

  // ('[' | LSQUARE_NEW) ('as' type_ ':')? rawseq? ']'
  private static boolean atom_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = atom_4_0(b, l + 1);
    r = r && atom_4_1(b, l + 1);
    r = r && atom_4_2(b, l + 1);
    r = r && consumeToken(b, "]");
    exit_section_(b, m, null, r);
    return r;
  }

  // '[' | LSQUARE_NEW
  private static boolean atom_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "[");
    if (!r) r = consumeToken(b, LSQUARE_NEW);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('as' type_ ':')?
  private static boolean atom_4_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_4_1")) return false;
    atom_4_1_0(b, l + 1);
    return true;
  }

  // 'as' type_ ':'
  private static boolean atom_4_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_4_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AS);
    r = r && type_(b, l + 1);
    r = r && consumeToken(b, ":");
    exit_section_(b, m, null, r);
    return r;
  }

  // rawseq?
  private static boolean atom_4_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_4_2")) return false;
    rawseq(b, l + 1);
    return true;
  }

  // 'object' ('\' ID (',' ID)* '\')? cap? ('is' type_)? members 'end'
  private static boolean atom_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_5")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OBJECT);
    r = r && atom_5_1(b, l + 1);
    r = r && atom_5_2(b, l + 1);
    r = r && atom_5_3(b, l + 1);
    r = r && members(b, l + 1);
    r = r && consumeToken(b, END);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('\' ID (',' ID)* '\')?
  private static boolean atom_5_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_5_1")) return false;
    atom_5_1_0(b, l + 1);
    return true;
  }

  // '\' ID (',' ID)* '\'
  private static boolean atom_5_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_5_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "\\");
    r = r && consumeToken(b, ID);
    r = r && atom_5_1_0_2(b, l + 1);
    r = r && consumeToken(b, "\\");
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' ID)*
  private static boolean atom_5_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_5_1_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!atom_5_1_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "atom_5_1_0_2", c)) break;
    }
    return true;
  }

  // ',' ID
  private static boolean atom_5_1_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_5_1_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && consumeToken(b, ID);
    exit_section_(b, m, null, r);
    return r;
  }

  // cap?
  private static boolean atom_5_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_5_2")) return false;
    cap(b, l + 1);
    return true;
  }

  // ('is' type_)?
  private static boolean atom_5_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_5_3")) return false;
    atom_5_3_0(b, l + 1);
    return true;
  }

  // 'is' type_
  private static boolean atom_5_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_5_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IS);
    r = r && type_(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '{' ('\' ID (',' ID)* '\')? cap? ID? typeparams? ('(' | LPAREN_NEW) lambdaparams? ')' lambdacaptures? (':' type_)? '?'? '=>' rawseq '}' cap?
  private static boolean atom_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "{");
    r = r && atom_6_1(b, l + 1);
    r = r && atom_6_2(b, l + 1);
    r = r && atom_6_3(b, l + 1);
    r = r && atom_6_4(b, l + 1);
    r = r && atom_6_5(b, l + 1);
    r = r && atom_6_6(b, l + 1);
    r = r && consumeToken(b, ")");
    r = r && atom_6_8(b, l + 1);
    r = r && atom_6_9(b, l + 1);
    r = r && atom_6_10(b, l + 1);
    r = r && consumeToken(b, "=>");
    r = r && rawseq(b, l + 1);
    r = r && consumeToken(b, "}");
    r = r && atom_6_14(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('\' ID (',' ID)* '\')?
  private static boolean atom_6_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6_1")) return false;
    atom_6_1_0(b, l + 1);
    return true;
  }

  // '\' ID (',' ID)* '\'
  private static boolean atom_6_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "\\");
    r = r && consumeToken(b, ID);
    r = r && atom_6_1_0_2(b, l + 1);
    r = r && consumeToken(b, "\\");
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' ID)*
  private static boolean atom_6_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6_1_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!atom_6_1_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "atom_6_1_0_2", c)) break;
    }
    return true;
  }

  // ',' ID
  private static boolean atom_6_1_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6_1_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && consumeToken(b, ID);
    exit_section_(b, m, null, r);
    return r;
  }

  // cap?
  private static boolean atom_6_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6_2")) return false;
    cap(b, l + 1);
    return true;
  }

  // ID?
  private static boolean atom_6_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6_3")) return false;
    consumeToken(b, ID);
    return true;
  }

  // typeparams?
  private static boolean atom_6_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6_4")) return false;
    typeparams(b, l + 1);
    return true;
  }

  // '(' | LPAREN_NEW
  private static boolean atom_6_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6_5")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "(");
    if (!r) r = consumeToken(b, LPAREN_NEW);
    exit_section_(b, m, null, r);
    return r;
  }

  // lambdaparams?
  private static boolean atom_6_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6_6")) return false;
    lambdaparams(b, l + 1);
    return true;
  }

  // lambdacaptures?
  private static boolean atom_6_8(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6_8")) return false;
    lambdacaptures(b, l + 1);
    return true;
  }

  // (':' type_)?
  private static boolean atom_6_9(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6_9")) return false;
    atom_6_9_0(b, l + 1);
    return true;
  }

  // ':' type_
  private static boolean atom_6_9_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6_9_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ":");
    r = r && type_(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '?'?
  private static boolean atom_6_10(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6_10")) return false;
    consumeToken(b, "?");
    return true;
  }

  // cap?
  private static boolean atom_6_14(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_6_14")) return false;
    cap(b, l + 1);
    return true;
  }

  // '@{' ('\' ID (',' ID)* '\')? cap? ID? typeparams? ('(' | LPAREN_NEW) lambdaparams? ')' lambdacaptures? (':' type_)? '?'? '=>' rawseq '}' cap?
  private static boolean atom_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_7")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "@{");
    r = r && atom_7_1(b, l + 1);
    r = r && atom_7_2(b, l + 1);
    r = r && atom_7_3(b, l + 1);
    r = r && atom_7_4(b, l + 1);
    r = r && atom_7_5(b, l + 1);
    r = r && atom_7_6(b, l + 1);
    r = r && consumeToken(b, ")");
    r = r && atom_7_8(b, l + 1);
    r = r && atom_7_9(b, l + 1);
    r = r && atom_7_10(b, l + 1);
    r = r && consumeToken(b, "=>");
    r = r && rawseq(b, l + 1);
    r = r && consumeToken(b, "}");
    r = r && atom_7_14(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('\' ID (',' ID)* '\')?
  private static boolean atom_7_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_7_1")) return false;
    atom_7_1_0(b, l + 1);
    return true;
  }

  // '\' ID (',' ID)* '\'
  private static boolean atom_7_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_7_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "\\");
    r = r && consumeToken(b, ID);
    r = r && atom_7_1_0_2(b, l + 1);
    r = r && consumeToken(b, "\\");
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' ID)*
  private static boolean atom_7_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_7_1_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!atom_7_1_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "atom_7_1_0_2", c)) break;
    }
    return true;
  }

  // ',' ID
  private static boolean atom_7_1_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_7_1_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && consumeToken(b, ID);
    exit_section_(b, m, null, r);
    return r;
  }

  // cap?
  private static boolean atom_7_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_7_2")) return false;
    cap(b, l + 1);
    return true;
  }
